[package]
name = "wasm-rusty-checkers"
version = "0.0.1"
authors = ["John <john@real-currents.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
mut_static = ""
lazy_static = ""
wasm-bindgen = "0.2.69"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]
