[package]
name = "edu"
version = "0.0.1"
authors = ["John <john@real-currents.com>"]
edition = "2018"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.2"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#crate-type = ["cdylib"]
